--- a/static/scss/imports/_variables.scss
+++ b/static/scss/imports/_variables.scss
@@ -3,6 +3,7 @@ $emphasis-color: #3853f0;
 $emphasis-color-lighter: #537ae6;
 $overlay-color: #00000066;
 $footer-bg-color: #1c1c1c; 
+$grey-color: #bdbdbd;
 
 $transition-duration: 250ms;
 
