--- a/static/scss/style.css
+++ b/static/scss/style.css
@@ -33,6 +33,10 @@ ul {
   color: white;
 }
 
+.bg-white {
+  background-color: white;
+}
+
 .colored {
   color: #3853f0;
 }
@@ -63,6 +67,9 @@ ul {
 .flex.justify-center {
   justify-content: center;
 }
+.flex.justify-between {
+  justify-content: space-between;
+}
 .flex.align-center {
   align-items: center;
 }
@@ -70,10 +77,10 @@ ul {
   flex-direction: column;
   height: 100%;
 }
-.flex.gap1 {
+.flex.gap-1 {
   gap: 1em;
 }
-.flex.gap15 {
+.flex.gap-15 {
   gap: 1.5em;
 }
 .flex.wrap {
@@ -165,6 +172,7 @@ ul {
 .fixed.logo, .fixed:has(img) {
   top: 20px;
   left: 20px;
+  z-index: 10;
 }
 
 .description {
@@ -172,10 +180,18 @@ ul {
   font-weight: 300;
 }
 
+.btn-black {
+  display: inline-block;
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 1em 2em;
+  margin: 20px;
+}
+
 .logo img {
   width: 100px;
   height: 100px;
-  z-index: 10;
 }
 
 .header {
@@ -528,6 +544,7 @@ ul {
   padding: 0 40px;
 }
 .carousel .carousel__card {
+  position: relative;
   width: 260px;
   background-color: white;
 }
@@ -539,14 +556,12 @@ ul {
 }
 .carousel .carousel__card .card__text-wrapper {
   padding: 20px;
+  margin-bottom: 80px;
 }
-.carousel .carousel__card .card__button {
-  display: inline-block;
-  color: white;
-  background-color: black;
-  border-radius: 5px;
-  padding: 15px 30px;
-  margin: 20px;
+.carousel .carousel__card .btn-black {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .about-hero {
@@ -586,7 +601,7 @@ ul {
   background: rgba(255, 255, 255, 0.8);
   border-radius: 100%;
   transform: scale(0);
-  z-index: 20;
+  z-index: 1;
   -webkit-animation-name: ripple;
           animation-name: ripple;
   -webkit-animation-duration: 6000ms;
@@ -618,6 +633,39 @@ ul {
     transform: scale(2.5);
   }
 }
+.katalog-cards-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.katalog-cards-wrapper .katalog-card {
+  position: relative;
+  text-align: center;
+  width: 275px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.katalog-cards-wrapper .katalog-card img {
+  width: 100%;
+  height: 365px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.katalog-cards-wrapper .katalog-card .text-wrapper {
+  margin-bottom: 48px;
+}
+.katalog-cards-wrapper .katalog-card .text-wrapper div {
+  margin-top: 20px;
+}
+.katalog-cards-wrapper .katalog-card .price s {
+  color: #bdbdbd;
+}
+.katalog-cards-wrapper .katalog-card .btn-wrapper {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .footer {
   padding-top: 75px;
   padding-bottom: 75px;
