--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -40,6 +40,10 @@ ul {
     color: white;
 }
 
+.bg-white {
+    background-color: white;
+}
+
 .colored {
     color: $emphasis-color;
 }
@@ -72,6 +76,10 @@ ul {
         justify-content: center;
     }
 
+    &.justify-between {
+        justify-content: space-between;
+    }
+
     &.align-center {
         align-items: center;
     }
@@ -81,14 +89,14 @@ ul {
         height: 100%;
     }
 
-    &.gap1 {
+    &.gap-1 {
         gap: 1em;
     }
-    
-    &.gap15 {
+
+    &.gap-15 {
         gap: 1.5em
     }
-    
+
     &.wrap {
         flex-wrap: wrap;
     }
@@ -179,6 +187,7 @@ ul {
     &:has(img) {
         top: 20px;
         left: 20px;
+        z-index: 10;
     }
 }
 
@@ -187,10 +196,18 @@ ul {
     font-weight: 300;
 }
 
+.btn-black {
+    display: inline-block;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    padding: 1em 2em;
+    margin: 20px;
+}
+
 .logo img {
     width: 100px;
     height: 100px;
-    z-index: 10;
 }
 
 .header {
@@ -552,6 +569,7 @@ ul {
     padding: 0 40px;
 
     .carousel__card {
+        position: relative;
         width: 260px;
         // height: 100%;
         background-color: white;
@@ -564,15 +582,13 @@ ul {
 
         .card__text-wrapper {
             padding: 20px;
+            margin-bottom: 80px;
         }
 
-        .card__button {
-            display: inline-block;
-            color: white;
-            background-color: black;
-            border-radius: 5px;
-            padding: 15px 30px;
-            margin: 20px;
+        .btn-black {
+            position: absolute;
+            bottom: 0;
+            left: 0;
         }
     }
 }
@@ -616,7 +632,7 @@ ul {
         background: rgba(255, 255, 255, 0.8);
         border-radius: 100%;
         transform: scale(0);
-        z-index: 20;
+        z-index: 1;
         animation-name: ripple;
         animation-duration: 6000ms;
         animation-timing-function: linear;
@@ -633,6 +649,44 @@ ul {
     100% {
         opacity: 0;
         transform: scale(2.5);
+    }
+}
+
+.katalog-cards-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    .katalog-card {
+        position: relative;
+        text-align: center;
+        width: 275px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+
+        img {
+            width: 100%;
+            height: 365px;
+            object-fit: cover;
+        }
+
+        .text-wrapper {
+            margin-bottom: 48px;
+
+            div {
+                margin-top: 20px;
+            }
+        }
+
+        .price s {
+            color: $grey-color;
+        }
+
+        .btn-wrapper {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
     }
 }
 
