--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -671,7 +671,7 @@ ul {
         }
 
         .text-wrapper {
-            margin-bottom: 48px;
+            margin-bottom: 96px;
 
             div {
                 margin-top: 20px;
@@ -680,6 +680,7 @@ ul {
 
         .price s {
             color: $grey-color;
+            font-size: 14px;
         }
 
         .btn-wrapper {
